cmake_minimum_required(VERSION 3.16)
project(VectorList LANGUAGES CXX)

set(BINARY_DIR "${CMAKE_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BINARY_DIR}/lib")
add_subdirectory(Libs/IContainer)
add_subdirectory(Libs/List)
add_subdirectory(Libs/Vector)
add_executable(${PROJECT_NAME} Main/main.cpp)
